@@ -1,5 +1,6 @@
 <h5>3.7.0 Alpha   [2023-07-06]</h5>  Dev: XOOPS 2.5.11 RC2, PHP 8.0
  - implemented smarty 3 (zivXP/goffy)
+ - fixed bug in creation if search.inc.php (zivXP/goffy)
 
 <h5>3.6.0 Stable   [2023-02-28]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.25, PHP 8.0.12, PHP 8.1.0 Beta 4
  - moved to last stable with smarty 2 (goffy)
